--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link href="/public/css/base.css" rel="stylesheet">
         <script src="/public/js/base.js?v=2"></script>
     </head>
-    <body>
+    <body background="/img/1434615196132.jpg">
             <span class="messenger-spinner-side messenger-spinner-side-left"></span>
             <span class="messenger-spinner-fill"></span>
             <span class="messenger-spinner-side messenger-spinner-side-right"></span>
@@ -30,13 +30,13 @@
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav">
-                            <span class="sr-only">切换导航</span>
+                            <span class="sr-only"></span>
                             <span class="icon-bar"></span><span class="icon-bar"></span>
                             <span class="icon-bar"></span></button><a class="navbar-brand" href="/">Panda's Mirror</a></div>
                             <div id="nav" class="navbar-collapse collapse" role="navigation" aria-expanded="false" style="height: 1px;">
                             <ul class="nav navbar-nav hidden-sm">
-                                <li><a href="/free.html">免费插件</a></li>
-                                <li><a href="/buy.html">购买插件</a></li>
+                                <li><a href="index.html">主页</a></li>
+                                <li><a href="about.html">关于</a></li>
                                 <li><a href="/dz.html">定制插件</a></li>
                                 <li><a href="/zc.html">众筹插件</a></li>
                                 <li><a href="/zz.html">赞助商城</a></li>
