--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link href="/public/css/base.css" rel="stylesheet">
         <script src="/public/js/base.js?v=2"></script>
     </head>
-    <body background="/img/1434615196132.jpg">
+    <body>
             <span class="messenger-spinner-side messenger-spinner-side-left"></span>
             <span class="messenger-spinner-fill"></span>
             <span class="messenger-spinner-side messenger-spinner-side-right"></span>
@@ -37,9 +37,6 @@
                             <ul class="nav navbar-nav hidden-sm">
                                 <li><a href="index.html">主页</a></li>
                                 <li><a href="about.html">关于</a></li>
-                                <li><a href="/dz.html">定制插件</a></li>
-                                <li><a href="/zc.html">众筹插件</a></li>
-                                <li><a href="/zz.html">赞助商城</a></li>
                             </ul>
                         </button> 
                     </div>
@@ -53,8 +50,7 @@
                                 <table class="table">
                                     <thead>
                                         <tr>
-                                            <th>插件名称</th>
-                                            <th>英文名称</th>
+                                            <th>核心名称</th>
                                             <th>插件描述(点击查看完整简介)</th>
                                             <th>源码地址</th>
                                             <th>构建状态</th>
