--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@
             </div>
             <br />
         <hr>
-		<footer class="footer">声明：<br /><p class="pull-right">1.本网站是在<a href="http://w.yumc.pw">yum</a>的基础上写出来的<br />2.</p></footer>
+		<footer class="footer">声明：<br /><p class="pull-right">1.本网站是在<a href="http://w.yumc.pw">yum</a>的基础上写出来的<br />2.Copyright (c) 2019 Panda's Mirror</p></footer>
     </body>
 </html>
