--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 .footer{
                     position:absolute;
                     bottom:0;
-                    height:50px;
+                    height:70px;
                 }
             </style>
     </head>
@@ -104,8 +104,12 @@
                     </div>
                 </div>
             </div>
-            <br />
-        <hr>
-		<footer class="footer">声明：<br /><p class="pull-right">1.本网站是在<a href="http://w.yumc.pw">yum</a>的基础上写出来的<br />2.Copyright (c) 2019 Panda's Mirror</p></footer>
+        <footer class="footer">声明：<br />
+            <p class="pull-right">
+                1.本网站是在<a href="http://w.yumc.pw">yum</a>的基础上写出来的
+                <br />
+                2.<a href="https://github.com/MinecraftServerMirror/MinecraftServerMirror.github.io/blob/master/LICENSE"></a>Copyright (c) 2019 Panda's Mirror
+            </p>
+        </footer>
     </body>
 </html>
