--- a/html/spigot.html
+++ b/html/spigot.html
@@ -69,11 +69,9 @@
                                     <table class="table">
                                         <thead>
                                             <tr>
-                                                <th>核心名称</th>
+                                                <th>版本</th>
                                                 <th>插件描述(点击查看完整简介)</th>
-                                                <th>源码地址</th>
-                                                <th>构建状态</th>
-                                                <th>更新日志</th>
+                                                <th>更新时间</th>
                                                 <th>下载地址</th>
                                             </tr>
                                         </thead>
@@ -95,7 +93,7 @@
                                         <td>spigot</td>
                                         <td>纯净插件端</td>
                                         <td>-</td>
-                                        <td><img alt="Travis (.com)" src="https://img.shields.io/travis/com/MinecraftServerMirror/Server-Core.svg?style=popout-square"></td>
+                                        <td><img src="https://www.travis-ci.com/MinecraftServerMirror/Server-Core.svg?branch=master"></td>
                                         <td></td>
                                     </tr>
                                 </div>
@@ -104,12 +102,12 @@
                     </div>
                 </div>
             </div>
-        <footer class="footer">声明：<br />
-            <p class="pull-right">
-                1.本网站是在<a href="http://w.yumc.pw">yum</a>的基础上写出来的
-                <br />
-                2.<a href="https://github.com/MinecraftServerMirror/MinecraftServerMirror.github.io/blob/master/LICENSE"></a>Copyright (c) 2019 Panda's Mirror
-            </p>
-        </footer>
-    </body>
-</html>
+            <footer class="footer">声明：<br />
+                <p class="pull-right">
+                    1.本网站是在<a href="http://w.yumc.pw">yum</a>的基础上写出来的
+                    <br />
+                    2.<a href="https://github.com/MinecraftServerMirror/MinecraftServerMirror.github.io/blob/master/LICENSE"></a>Copyright (c) 2019 Panda's Mirror
+                </p>
+            </footer>
+        </body>
+    </html>
